--- a/src/mainpak/EscenaInicio.fxml
+++ b/src/mainpak/EscenaInicio.fxml
@@ -7,8 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="700.0" style="-fx-background-color: #333;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="mainpak.EscenaInicioController">
+<AnchorPane id="AnchorPane" prefHeight="450.0" prefWidth="800.0" style="-fx-background-color: #333;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mainpak.EscenaInicioController">
    <children>
       <AnchorPane layoutX="383.0" layoutY="13.0" prefHeight="375.0" prefWidth="288.0" style="-fx-background-color: red;">
          <children>
