--- a/src/mainpak/EscenaBuild.fxml
+++ b/src/mainpak/EscenaBuild.fxml
@@ -8,9 +8,8 @@
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.text.TextFlow?>
 
-<GridPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="630.0" prefWidth="1083.0" snapToPixel="false" xmlns="http://javafx.com/javafx/8.0.112-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mainpak.EscenaBuildController">
+<GridPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" snapToPixel="false" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mainpak.EscenaBuildController">
     <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" maxWidth="448.0" minWidth="10.0" prefWidth="500.0" />
         <ColumnConstraints hgrow="SOMETIMES" maxWidth="303.0" minWidth="10.0" prefWidth="500.0" />
@@ -32,13 +31,13 @@
         <Button mnemonicParsing="false" onAction="#operar" text="Crea build" GridPane.rowIndex="4" />
         <Label text="Campeon" />
         <Label text="Objeto" GridPane.rowIndex="1" />
-        <TextField fx:id="numero1" promptText="e.j. Aatrox" GridPane.columnIndex="1" />
-        <TextField fx:id="numero2" promptText="Objeto añadir" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+        <TextField fx:id="txtCampeon" promptText="e.j. Aatrox" GridPane.columnIndex="1" />
+        <TextField fx:id="txtObAgregar" promptText="Objeto añadir" GridPane.columnIndex="1" GridPane.rowIndex="1" />
         <Label fx:id="resultat" GridPane.columnIndex="1" GridPane.rowIndex="4" />
         <Label text="Objetos" GridPane.rowIndex="2" />
         <Label fx:id="obj" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
         <Label text="Quitar objetos" GridPane.rowIndex="3" />
-        <TextField fx:id="numero21" layoutX="310.0" layoutY="98.0" promptText="Que item quitar" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+        <TextField fx:id="txtObQuitar" layoutX="310.0" layoutY="98.0" promptText="Que item quitar" GridPane.columnIndex="1" GridPane.rowIndex="3" />
         <Label text="Build:" GridPane.rowIndex="5" />
         <Label text="Campeon:" GridPane.columnIndex="1" GridPane.rowIndex="5" />
         <ImageView fx:id="imageView0" fitHeight="90.0" fitWidth="90.0" layoutX="13.0" layoutY="45.0" pickOnBounds="true" preserveRatio="true" x="34.0" y="56.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
@@ -56,6 +55,7 @@
         <ImageView fx:id="imageView6" fitHeight="90.0" fitWidth="90.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.rowIndex="7" />
       <Button mnemonicParsing="false" onAction="#añadir" text="Añadir objeto" GridPane.columnIndex="2" GridPane.rowIndex="1" />
       <Button mnemonicParsing="false" onAction="#quitar" text="Quitar objeto" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+      <Label fx:id="lblOro" text="Oro" GridPane.columnIndex="2" GridPane.rowIndex="7" />
     </children>
     <opaqueInsets>
         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
